# eagle-to-mqtt

./: .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  appveyor.yml  sonar-project.properties  vcpkg.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  cmake.yml  codeql-analysis.yml  coverage.yml  docker.yml
app/: app_entrypoint.sh
cmake/: BoostTestHelpers.cmake  CPackDebConfig.cmake  CodeCoverage.cmake
src/: main.cpp
src/application/: application.cpp  application.h
src/bridge/: bridge.cpp  bridge.h  bridge_registry.cpp  bridge_registry.h  bridge_stats.cpp  bridge_stats.h  bridge_status.cpp  bridge_status.h
src/exceptions/: duplicate_device_insertion.cpp  duplicate_device_insertion.h  incorrect_notification_callback.cpp  incorrect_notification_callback.h  invalid_bridge_status_value.cpp  invalid_bridge_status_value.h  invalid_currency_value.cpp  invalid_currency_value.h  invalid_message_value.cpp  invalid_message_value.h  invalid_number_conversion.cpp  invalid_number_conversion.h  invalid_pricing_tier_value.cpp  invalid_pricing_tier_value.h  invalid_priority_value.cpp  invalid_priority_value.h  invalid_queue_value.cpp  invalid_queue_value.h  invalid_status_value.cpp  invalid_status_value.h  invalid_unitsofmeasure_value.cpp  invalid_unitsofmeasure_value.h  invalid_value.cpp  invalid_value.h  missing_message_key.cpp  missing_message_key.h  missing_rainforest_node.cpp  missing_rainforest_node.h  not_implemented.cpp  not_implemented.h  options_option_conflict.cpp  options_option_conflict.h  unknown_fragment_type.cpp  unknown_fragment_type.h
src/interfaces/: iapiroute.cpp  iapiroute.h  ibridge.cpp  ibridge.h  idevice.cpp  idevice.h  ieagle.cpp  ieagle.h  ifragmentprocessor.cpp  ifragmentprocessor.h  ihttprouter.cpp  ihttprouter.h  ilistener.cpp  ilistener.h  inotification.cpp  inotification.h  ipublisher.cpp  ipublisher.h  irunnable.cpp  irunnable.h  iserializable.cpp  iserializable.h  iserializer.cpp  iserializer.h
src/metering/: device_factory.cpp  device_factory.h  device_identifier.cpp  device_identifier.h  device_registry.cpp  device_registry.h
src/metering/common/: base_energy_value.cpp  base_energy_value.h  calculated_energy_value.cpp  calculated_energy_value.h  currency_codes.cpp  currency_codes.h  demand_in_watts.cpp  demand_in_watts.h  energy_value.cpp  energy_value.h  ethernet_mac_id.cpp  ethernet_mac_id.h  fragment_types.cpp  fragment_types.h  mac_id.cpp  mac_id.h  meter_data.cpp  meter_data.h  priorities.cpp  priorities.h  protocol_types.cpp  protocol_types.h  protocols.h  (+19 more)
src/mqtt-client/: mqtt_client.cpp  mqtt_client.h  mqtt_connection.cpp  mqtt_connection.h  mqtt_qos.cpp  mqtt_qos.h
src/notifications/: notification_base.cpp  notification_base.h  notification_bridgestatuschanged.cpp  notification_manager.cpp  notification_manager.h  notification_publishkeepalive.cpp  notification_publishkeepalive.h  notification_publishpayload.cpp
src/options/: option_validators.cpp  option_validators.h  options.cpp  options.h
src/serialization/: bridge_serializer.cpp  bridge_serializer.h  bridgestatistics_serializer.cpp  bridgestatistics_serializer.h  deviceconnectivity_serializer.cpp  deviceconnectivity_serializer.h  deviceenergyusage_serializer.cpp  deviceenergyusage_serializer.h  devicestatistics_serializer.cpp  devicestatistics_serializer.h  eagle_serializer.cpp  eagle_serializer.h
src/upload-api/: http_connection.cpp  http_connection.h  http_router.cpp  http_router.h  http_types.cpp  http_types.h  upload_api.cpp  upload_api.h
src/utils/: is_optional.cpp  is_optional.h  singleton.cpp  singleton.h
src/versions/: versions_cmake.constants.cpp.in  versions_cmake.cpp  versions_cmake.h  versions_git.constants.cpp.in  versions_git.cpp  versions_git.h
tests/: CMakeLists.txt  main.cpp
tests/conversion/: test_ethernet_macid.cpp  test_zigbee_macid.cpp
tests/http_api/: test_status_route.cpp
tests/metering/fragment_processors/: test_billing_period_list.cpp  test_block_price_detail.cpp  test_connection_status.cpp  test_current_summation.cpp  test_device_info.cpp  test_instantaneous_demand.cpp  test_message_cluster.cpp  test_network_info.cpp  test_price_cluster.cpp
tests/metering/fronius/: test_solarapi_v1_inverter.cpp  test_solarapi_v1_powerflow.cpp
tests/metering/model/: test_eagle_200_model.cpp
tests/metering/rainforest/: test_billing_period_list.cpp  test_block_price_detail.cpp  test_connection_status.cpp  test_current_summation.cpp  test_instantaneous_demand.cpp  test_message_cluster.cpp  test_network_info.cpp  test_price_cluster.cpp
tests/notifications/: test_notifications_connectivity.cpp
tests/options/: test_options.cpp
tests/test_tools/: CMakeLists.txt  test_tools_ethernet_mac_id.cpp  test_tools_ethernet_mac_id.h  test_tools_fragment_generator.cpp  test_tools_fragment_generator.h  test_tools_notification_payload_test.cpp  test_tools_notification_payload_test.h  test_tools_pass_c_array.cpp  test_tools_pass_c_array.h  test_tools_solarapi_generator.cpp  test_tools_solarapi_generator.h  test_tools_solarapi_generator_gen24.cpp  test_tools_solarapi_generator_hybrid.cpp  test_tools_solarapi_generator_nonhybrid.cpp  test_tools_time.cpp  test_tools_time.h  test_tools_zigbee_mac_id.cpp  test_tools_zigbee_mac_id.h
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/bridge/: test_bridge.cpp
tests/unit_tests/conversion/: test_ethernet_macid.cpp  test_zigbee_macid.cpp
tests/unit_tests/http_api/: test_status_route.cpp
tests/unit_tests/metering/fronius/: test_solarapi_v1_inverter.cpp  test_solarapi_v1_meter.cpp  test_solarapi_v1_powerflow.cpp  test_solarapi_v1_sensorcard.cpp  test_solarapi_v1_storages.cpp  test_solarapi_v1_stringcontrol.cpp
tests/unit_tests/metering/model/: test_eagle_200_model.cpp  test_symo_model.cpp
tests/unit_tests/metering/rainforest/: test_device_info.cpp  test_instantaneous_demand.cpp  test_message_cluster.cpp  test_price_cluster.cpp
tests/unit_tests/notifications/: test_notifications_connectivity.cpp
tests/unit_tests/options/: test_options.cpp
(+335 files in other folders)
